# recordatorios

./: .gitignore  README.md  build-appimage.sh  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: build-macos-dmg.yml
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  storage.rs
src/app/: AppController.ts
src/app/components/: SectionsSidebar.ts  StatusBar.ts  TaskEditor.ts
src/app/views/: AppShell.ts
src/styles/: components.css  editor.css
